# Zerovisor

./: BUILD.md  Cargo.toml  TODO.md  VMCS_IMPLEMENTATION_SUMMARY.md  task.md  temp.txt  test_vmcs.rs  vmcs_test_standalone.rs
.github/workflows/: formal_verification.yml  uefi-build.yml
.kiro/specs/zerovisor-hypervisor/: design.md  requirements.md  tasks.md
docs/: operations.md
formal_specs/: cluster_fault_tolerance.tla  deadlock_freedom.tla  hypervisor_state_machine.tla  information_flow.tla  memory_safety.tla  scheduler_progress.tla  starvation_freedom.tla
lang/: en.json  ja.json  zh.json
scripts/: ci_run_tests.sh  dev_setup.sh  qemu_run.sh  run_uefi.ps1
spec/: design.md  requirements.md
src/: efi_main.rs  lib.rs
src/arch/: mod.rs
src/arch/x86/: cpuid.rs  idt.rs  lapic.rs  mod.rs  msr.rs  smp.rs  trampoline.rs
src/arch/x86/vm/: mod.rs  svm.rs  vmcs.rs  vmx.rs
src/ctl/: cli.rs  mod.rs
src/diag/: audit.rs  dump.rs  mod.rs  panic.rs  security.rs  watchdog.rs
src/firmware/: mod.rs
src/firmware/acpi/: mod.rs
src/hv/: mod.rs  vcpu.rs  vm.rs
src/i18n/: mod.rs
src/iommu/: amdv.rs  mod.rs  state.rs  vtd.rs
src/migrate/: mod.rs
src/mm/: ept.rs  mod.rs  npt.rs  paging.rs  uefi.rs
src/obs/: log.rs  metrics.rs  mod.rs  trace.rs
src/time/: hpet.rs  mod.rs
src/util/: crc32.rs  format.rs  mod.rs
src/virtio/: block.rs  console.rs  mod.rs  net.rs
zerovisor-arm64/: Cargo.toml
zerovisor-arm64/src/: cpu.rs  interrupts.rs  lib.rs  memory.rs  timer.rs  virtualization.rs
zerovisor-bootloader/: Cargo.toml  build.rs
zerovisor-bootloader/.cargo/: config.toml
zerovisor-bootloader/src/: lib.rs  loader.rs  main.rs  memory.rs
zerovisor-bootloader/tests/: integration_test.rs
zerovisor-core/: Cargo.toml  build.rs
zerovisor-core/src/: accelerator.rs  api.rs  arch_state_translator.rs  attestation.rs  boot_manager.rs  carbon_aware.rs  cluster.rs  cluster_bft.rs  cluster_hotstuff.rs  cluster_runtime.rs  cni.rs  console.rs  crypto.rs  crypto_mem.rs  csi.rs  debug_interface.rs  debug_stub.rs  distributed_hypervisor.rs  energy.rs  energy_pue.rs  fault.rs  feature_registry.rs  formal.rs  formal_tests.rs  gpu.rs  ha.rs  homomorphic_mem.rs  hypervisor.rs  info_flow.rs  io_emulation.rs  iommu.rs  isolation.rs  kube_cri.rs  kube_runtime.rs  lattice_kex.rs  lib.rs  log.rs  memory.rs  microvm.rs  migration.rs  (+18 more)
zerovisor-core/tests/: byzantine_fault.rs  common.rs  device_virtualization.rs  energy.rs  info_flow.rs  integration_vm.rs  irq_latency_model.rs  kube_runtime.rs  perf_auto.rs  perf_bench.rs  property_vm.rs  rt_scheduler.rs  system_suite.rs
zerovisor-core/tests/ui/: confidential_leak.rs
zerovisor-hal/: Cargo.toml
zerovisor-hal/src/: accelerator.rs  cpu.rs  cycles.rs  dirty.rs  fpga.rs  gpu.rs  interrupts.rs  iommu.rs  lib.rs  memory.rs  nic.rs  numa.rs  nvme.rs  pci.rs  power.rs  power_mgmt.rs  qpu.rs  rdma_opt.rs  rdma_vnet.rs  storage.rs  timer.rs  tpm.rs  tpu.rs  virtio_blk.rs  virtio_gpu.rs  virtualization.rs
zerovisor-hal/src/arch/: mod.rs  x86_64.rs
zerovisor-hal/src/arch/arm64/: cpu.rs  ept_manager.rs  iommu.rs  mod.rs  power.rs
zerovisor-hal/src/arch/riscv64/: accelerator.rs  cpu.rs  ept_manager.rs  iommu.rs  mod.rs  power.rs
zerovisor-hal/src/arch/x86_64/: accelerator.rs  cpu.rs  ept.rs  ept_manager.rs  gpu.rs  iommu.rs  mod.rs  nested_virtualization.rs  nic.rs  pci.rs  power.rs  storage.rs  svm.rs  vmcs.rs  vmexit_fast.rs  vmx.rs
zerovisor-hal/src/power/: mod.rs  thermal_mgr.rs
zerovisor-riscv/: Cargo.toml
zerovisor-riscv/src/: lib.rs
zerovisor-sdk/: Cargo.toml  build.rs
zerovisor-sdk/proto/: runtime.proto
zerovisor-sdk/src/: lib.rs
zerovisor-x86_64/: Cargo.toml
zerovisor-x86_64/src/: cpu.rs  interrupts.rs  lib.rs  memory.rs  svm_engine.rs  timer.rs  virtualization.rs
