[package]
name = "zerovisor"
version = "0.1.0"
edition = "2021"
authors = ["Zerovisor Team"]
description = "World-class Type-1 hypervisor written in Rust"

[lib]
name = "zerovisor"
path = "src/lib.rs"

[dependencies]
zerovisor-core = { path = "zerovisor-core" }
zerovisor-hal = { path = "zerovisor-hal" }
sha2 = { version = "0.10", default-features = false }
bitvec = "1.0"

[features]
default = []

[workspace]
members = [
    "zerovisor-core",
    "zerovisor-hal",
    "zerovisor-sdk"
]

[workspace.dependencies]
# Core dependencies for no_std environment
spin = "0.9"
bitflags = "2.4"
static_assertions = "1.1"
sha2 = { version = "0.10", default-features = false }

# Architecture-specific dependencies
x86_64 = "0.14"
cortex-a = "8.1"
riscv = "0.10"
x86 = "0.52"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"