[package]
name = "zerovisor-core"
version = "0.1.0"
edition = "2021"
description = "Core hypervisor functionality"

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
static_assertions = { workspace = true }
zerovisor-hal = { path = "../zerovisor-hal" }
sha2 = { workspace = true }
pqcrypto-kyber = { version = "0.5.0", default-features = false, features = ["std"] }
pqcrypto-dilithium = { version = "0.5.0", default-features = false, features = ["std"] }
pqcrypto-sphincsplus = { version = "0.5.0", default-features = false, features = ["std"] }
aes = { version = "0.8", default-features = false }
cipher = { version = "0.4", default-features = false, features = ["alloc"] }

[features]
default = []