[package]
name = "zerovisor-core"
version = "0.1.0"
edition = "2021"
description = "Core hypervisor functionality"

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
static_assertions = { workspace = true }
zerovisor-hal = { path = "../zerovisor-hal" }
sha2 = { workspace = true }
pqcrypto-kyber = { version = "0.5.0", default-features = false }
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
pqcrypto-sphincsplus = { version = "0.5.0", default-features = false }
aes = { version = "0.8", default-features = false }
cipher = { version = "0.4", default-features = false, features = ["alloc"] }
pqcrypto-traits = "0.3"
xts-mode = "0.5.1"
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
wasmi = { version = "0.29", default-features = false }
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
tfhe = { version = "1.3", default-features = false, features = ["boolean", "integer"], optional = true }

[features]
default = []
formal_verification = []
coq_proofs = []
homomorphic_encryption = ["tfhe"]
energy_management = []

[dev-dependencies]
proptest = "1.4"
trybuild = "1.0.72"