[package]
name = "zerovisor-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Zerovisor Team"]
description = "Developer SDK and CLI tools for managing Zerovisor hypervisor"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"

[lib]
name = "zvi_sdk"
path = "src/lib.rs"

[[bin]]
name = "zvi-cli"
path = "src/bin/cli.rs" 